cleaned up a formatting glitch and some minor layout issues

--- a/assets/webapp.css
+++ b/assets/webapp.css
@@ -8,8 +8,10 @@
 	background-repeat: no-repeat;
 	background-position: center;
 	text-align: center;
-	min-height: 250px;
+	max-width: 975px;
+	min-height: 220px;
 	width: 100%;
+	border: 3px solid red;
 }
 
 .tiermap {
@@ -40,7 +42,39 @@
 .demoButton {
 	margin-left: 30;
 	margin-top: 20;
+	margin-bottom; 100;
 	width: 320;
 	font-size: 12;
 	float: right;
+}
+
+.allDivs {
+	margin-left: 30;
+	margin-top: 20;
+	width: 775px;
+	font-size: 12;
+}
+
+.mainDiv {
+	max-width: 1050px;
+	margin-left: 25px;
+}
+
+.row {
+	#background-color: red;
+	max-width: 1000px;
+	margin-left: 30;
+	margin-top: 20;
+	width: 320;
+	font-size: 12;
+}
+
+.button {	
+	#margin-left: 30;
+	#margin-top: 20;
+	#margin-bottom; 100;
+	#padding: 10px;
+	#width: 100px;
+	font-size: 12;
+	#float: right;
 }
